<resources>
    <string name="app_name">NIHON POP QUIZ</string>
    <string name="title_activity_display_message">NIHON POP QUIZ</string>
    <string name="action_settings">SETTING</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_exit">BACK TO MENU</string>
    <string name="btn_back_main">BACK TO MENU</string>
    <string name="guess_text">GAME: 1/50</string>
    <string name="btn_skip">SKIP</string>
    <string name="logo_text">HOW MANY LOGOS CAN YOU GUESS</string>
    <string name="gameover_text">CONGRATULATIONS ON THE SUCCESS!</string>
    <string name="title_activity_index">NIHON POP QUIZ</string>
    <string name="Vocabulary">LEARN JAPANESE</string>
    <string name="Game">QUIZ GAME</string>
    <string name="title_activity_page1">Page1</string>
    <string name="title_activity_view_paper">LEARN JAPANESE</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_page2">Page2</string>
    <string name="title_activity_page3">Page3</string>
    <string-array name="employees">
        <item>かいしゃいん</item>
        <item>エンジニア</item>
        <item>がか</item>
        <item>ぎんこういん</item>
        <item>いしゃ</item>
        <item>かいしゃいん</item>
        <item>かんごふ</item>
        <item>かしゅ</item>
        <item>けいさつ</item>
        <item>こうかんしゅ</item>
        <item>きょうし</item>
        <item>しょうへい</item>
        <item>しゅふ</item>
    </string-array>
    <string-array name="employeesimgsdescrition">
        <item>chourishi</item>
        <item>enjinia</item>
        <item>gaka</item>
        <item>ginkouin</item>
        <item>isha</item>
        <item>kaishain</item>
        <item>kangofu</item>
        <item>kashu</item>
        <item>keisatsukan</item>
        <item>koukanshu</item>
        <item>kyoushi</item>
        <item>shouhei</item>
        <item>shufu</item>
    </string-array>
    <string-array name="employeesimgsdescrition2">
        <item>chef</item>
        <item>engineer</item>
        <item>painter</item>
        <item>bank employees</item>
        <item>doctor</item>
        <item>employees</item>
        <item>nurse</item>
        <item>singer</item>
        <item>police</item>
        <item>operator</item>
        <item>professor</item>
        <item>soldier</item>
        <item>maid</item>
    </string-array>
    <string-array name="tabemono">
        <item>バナナ</item>
        <item>ぶどう</item>
        <item>えび</item>
        <item>ハム</item>
        <item>ハンバーガー</item>
        <item>ハンバー</item>
        <item>いちご</item>
        <item>ジュース</item>
        <item>カニ</item>
        <item>ケチャップ</item>
        <item>コーヒー</item>
        <item>ココア</item>
        <item>コメ</item>
        <item>コーラ</item>
        <item>オレンジ</item>
        <item>なし</item>
        <item>にんじん</item>
        <item>ピザ</item>
        <item>ラーメン</item>
        <item>りんご</item>
        <item>さかな</item>
        <item>サンドイッチ</item>
        <item>そうゆ</item>
        <item>スイカ</item>
        <item>すし</item>
        <item>たまご</item>
        <item>とりにく</item>
        <item>トースト</item>
    </string-array>
    <string-array name="tabemonodescrition">
        <item>banana</item>
        <item>budou</item>
        <item>ebi</item>
        <item>hamu</item>
        <item>hanba-ga-</item>
        <item>hanba-gu</item>
        <item>ichigo</item>
        <item>jusu</item>
        <item>kani</item>
        <item>kechappu</item>
        <item>kohii</item>
        <item>kokoa</item>
        <item>kome</item>
        <item>ko-ra</item>
        <item>mikan</item>
        <item>nashi</item>
        <item>ninjin</item>
        <item>piza</item>
        <item>ra-men</item>
        <item>ringo</item>
        <item>sakana</item>
        <item>sandoitchi</item>
        <item>shouyu</item>
        <item>suika</item>
        <item>sushi</item>
        <item>tamago</item>
        <item>tori-niku</item>
        <item>to-suto</item>
    </string-array>
    <string-array name="tabemonodescrition2">
        <item>banana</item>
        <item>grapes</item>
        <item>shrimp</item>
        <item>Ham</item>
        <item>hamburger</item>
        <item>hamburger</item>
        <item>strawberry</item>
        <item>juice</item>
        <item>crab</item>
        <item>ketchup</item>
        <item>coffee</item>
        <item>cocoa</item>
        <item>rice</item>
        <item>cola</item>
        <item>orange</item>
        <item>pear</item>
        <item>carrots</item>
        <item>pizaz</item>
        <item>noodle</item>
        <item>aplle</item>
        <item>fish</item>
        <item>sandwich</item>
        <item>soy sauce</item>
        <item>watermelon</item>
        <item>sushi</item>
        <item>egg</item>
        <item>chicken</item>
        <item>toast</item>
    </string-array>
    <string-array name="gatsu">
        <item>いちがつ</item>
        <item>にがつ</item>
        <item>さんがつ</item>
        <item>しがつ</item>
        <item>ごがつ</item>
        <item>ろくがつ</item>
        <item>しちがつ</item>
        <item>はちがつ</item>
        <item>くがつ</item>
        <item>じゅうがつ</item>
        <item>じゅういちがつ</item>
        <item>じゅうにがつ</item>
        <item>なんがつ</item>
    </string-array>
    <string-array name="gatsudescrition">
        <item>ichi gatsu</item>
        <item>ni gatsu</item>
        <item>san gatsu</item>
        <item>shi gatsu</item>
        <item>go gatsu</item>
        <item>roku gatsu</item>
        <item>shichi gatsu</item>
        <item>hachi gatsu</item>
        <item>ku gatsu</item>
        <item>juu gatsu</item>
        <item>juu ichi gatsu</item>
        <item>juu ni gatsu</item>
        <item>nan gatsu</item>
    </string-array>
    <string-array name="gatsudescrition2">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
        <item>What month</item>
    </string-array>
    <string-array name="tengiyoho">
        <item>雨</item>
        <item>晴れ</item>
        <item>雷</item>
        <item>曇り</item>
        <item>台風</item>
    </string-array>
    <string-array name="tengiyohodescrition">
        <item>ame</item>
        <item>hare</item>
        <item>kaminari</item>
        <item>kumori</item>
        <item>taifuu</item>
    </string-array>
    <string-array name="tengiyohodescrition2">
        <item>rain</item>
        <item>mostly sunny</item>
        <item>thunder</item>
        <item>cloudiness</item>
        <item>typhoon</item>
    </string-array>
    <string-array name="yobi">
        <item>げつようび</item>
        <item>かようび</item>
        <item>すいようび</item>
        <item>もくようび </item>
        <item>きんようび  </item>
        <item>どようび  </item>
        <item>にちようび</item>
        <item>なんようび</item>
    </string-array>
    <string-array name="yobidescrition">
        <item>nichi youbi</item>
        <item>getsu youbi</item>
        <item>ka youbi</item>
        <item>sui youbi</item>
        <item>moku youbi</item>
        <item>kin youbi</item>
        <item>do youbi</item>
        <item>nan gatsu</item>
    </string-array>
    <string-array name="yobidescrition2">
        <item>monday</item>
        <item>tuesday</item>
        <item>wednesday</item>
        <item>thursday </item>
        <item>friday  </item>
        <item>saturday  </item>
        <item>sunday</item>
        <item>what day is today ?</item>
    </string-array>
    <string-array name="number">
        <item>いち</item>
        <item>に</item>
        <item>さん </item>
        <item>よん</item>
        <item>ご </item>
        <item>ろく</item>
        <item>なな</item>
        <item>はち</item>
        <item>きゅう</item>
        <item>ゅういち</item>
        <item>ゅうに</item>
        <item>ゅうさん</item>
        <item>ゅうよん</item>
        <item>ゅうご</item>
        <item>ゅうろく</item>
        <item>ゅうなな</item>
        <item>ゅうはち</item>
        <item>ゅうきゅう</item>
        <item>じゅうきゅう</item>
        <item>にじゅう</item>
        <item>さんじゅう</item>
        <item>よんじゅう</item>
        <item>ごじゅう</item>
        <item>ろくじゅう</item>
        <item>ななじゅう</item>
        <item>はちじゅう</item>
        <item>きゅうじゅう</item>
        <item>ひゃく</item>
        <item>にひゃく</item>
        <item>さんびゃく</item>
        <item>よんひゃく</item>
        <item>ごひゃく</item>
        <item>ろっぴゃく</item>
        <item>ななぴゃく</item>
        <item>はっぴゃく</item>
        <item>きゅうひゃく</item>
        <item>せん </item>
        <item>にさん</item>
        <item>さんぜん</item>
        <item>よんせん</item>
        <item>ごせん</item>
        <item>ろくせん</item>
        <item>ななせん</item>
        <item>はっせん</item>
        <item>きゅうせん</item>
        <item> いちまん</item>
        <item>じゅうまん</item>
        <item>ひゃくまん</item>
        <item>せんまん</item>
        <item>いちおく</item>
        <item>に分のいち</item>
    </string-array>
    <string-array name="numberdescrition">
        <item>ichi</item>
        <item>ni</item>
        <item>san</item>
        <item>yon</item>
        <item>go</item>
        <item>roku</item>
        <item>nana</item>
        <item>hachi</item>
        <item>kyuu</item>
        <item>juu</item>
        <item>juuichi</item>
        <item>juuni</item>
        <item>juusan</item>
        <item>juuyon</item>
        <item>juugo</item>
        <item>juuroku</item>
        <item>juunana</item>
        <item>juuhachi</item>
        <item>juukyuu</item>
        <item>nijuu</item>
        <item>sanjuu</item>
        <item>yonjuu</item>
        <item>gojuu</item>
        <item>rokujuu</item>
        <item>nanajuu</item>
        <item>hachijuu</item>
        <item>kyuujuu</item>
        <item>hyaku</item>
        <item>nihyaku</item>
        <item>sanhyaku</item>
        <item>yonhyaku</item>
        <item>gohyaku</item>
        <item>roppyaku</item>
        <item>nanahyaku</item>
        <item>happyaku  </item>
        <item>kyuuhyaku</item>
        <item>sen</item>
        <item>nisen</item>
        <item>sansen</item>
        <item>yonsen</item>
        <item>gosen</item>
        <item>rokusen</item>
        <item>nanasen</item>
        <item>hassen</item>
        <item>kyuusen</item>
        <item>ichiman</item>
        <item>juuman</item>
        <item>hyakuman</item>
        <item>senman</item>
        <item>ichioku</item>
        <item>nibunnoichi</item>
    </string-array>
</resources>