<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >


    <TextView
        android:text="@string/app_name"
        android:textSize="@dimen/size_text_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"/>
    <TextView
        android:text="@string/gameover_text"
        android:textSize="@dimen/size_text_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"/>


    <Button
        android:id="@+id/btn_back_main"
        android:text="@string/btn_back_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_primary"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textColor="@android:color/white"/>

</LinearLayout>